--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,44 @@
     transform: rotate(360deg);
   }
 }
+
+.container_center{
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  text-align: center;    
+  height: 100vh;       
+}
+
+.center_content{
+
+  text-align: center;  
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+      
+}
+.border {
+  border: 2px solid #000;
+  padding: 100px;
+}
+
+.button-center {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+
+.my-button {
+  margin: 5px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.myBG {
+  background-color: #f0f5f5;
+}
